fix grid layout pushing content on smaller devices

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -83,3 +83,14 @@ main {
     }
     
 }
+
+@media (max-width: 500px) {
+    .album-card {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+        grid-column-gap: 1.25em;
+        grid-row-gap: 1.25em;
+        width: 70%;
+    }
+}
